[project]
name = "shunkei_sdk"
version = "0.2.0"
authors = [{ name="Shunkei, LLC", email="info@shunkei.jp" }]
description = "Shunkei SDK for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "zeroconf == 0.119.0",
    "requests",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.urls]
"Homepage" = "https://github.com/shunkei-jp/shunkei_sdk"
"Bug Tracker" = "https://github.com/shunkei-jp/shunkei_sdk/issues"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true

